# CobA

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/configs/: baseline_llm_only.yaml  baseline_semgrep.yaml  coba_acc.yaml  coba_fast.yaml  coba_fast_real.yaml  owasp_benchmark.yaml
docs/: 00_OVERVIEW.md  01_PLAN.md  02_ARCHITECTURE.md  03_TOOLS.md  04_DATA_SOURCES.md  05_CODE_UNDERSTANDING.md  06_LLM_INTEGRATION.md  07_PERFORMANCE.md  08_EVALUATION.md  09_RISK_ETHICS.md  10_GLOSSARY.md  references.bib
examples/: README.md  safe_python.py  vulnerable_python.py
examples/vulnerable_c/: strcpy_overflow.c
examples/vulnerable_java/: SqlInjection.java
examples/vulnerable_js/: xss_express.js
report/: Appendix_A_Co_so_ly_thuyet.md  Appendix_B_Khao_sat.md  Chuong_1_Tong_quan.md  Chuong_2_Co_so_ly_thuyet.md  Chuong_2_Thiet_ke_va_Trien_khai.md  Chuong_3_Danh_gia_va_Ket_luan.md  Chuong_3_Khao_sat_lien_quan.md  Chuong_4_Thiet_ke_he_thong.md  Chuong_5_Trien_khai.md  Chuong_6_Danh_gia.md  Chuong_7_Ket_luan.md  Loi_cam_doan.md  Loi_cam_on.md  Phu_luc.md  README.md  Tom_tat.md
scripts/: build_cwe_kb.py  download_datasets.sh
src/coba/: __init__.py
src/coba/agent/: __init__.py  callgraph.py  chunker.py  detector.py  loop.py  planner.py  rag.py  skip_cache.py  verifier.py
src/coba/api/: __init__.py  app.py  routes.py
src/coba/cli/: __init__.py  main.py
src/coba/config/: __init__.py  settings.py
src/coba/data/: cwe_top25.json  fewshot_examples.json
src/coba/eval/: __init__.py  cli.py  datasets.py  matching.py  metrics.py  predictor.py  report.py  runner.py  schemas.py
src/coba/llm/: __init__.py  anthropic_provider.py  base.py  cost.py  gemini_provider.py  ollama_provider.py  openai_provider.py  router.py
src/coba/prompts/: __init__.py  detector.j2  verifier.j2
src/coba/tools/: __init__.py  bandit.py  base.py  gitleaks.py  joern.py  semgrep.py
src/coba/tools/joern_queries/: call_graph.sc  exec_of_tainted_string.sc
src/coba/utils/: logging.py  sanitize.py  schemas.py
tests/: conftest.py  test_api.py  test_callgraph.py  test_chunker.py  test_chunker_callgraph.py  test_cost_tracker.py  test_detector_parsing.py  test_eval_matching.py  test_eval_metrics.py  test_eval_predictor.py  test_eval_runner.py  test_fewshot_rag.py  test_llm_custom_base_url.py  test_orchestrator_budget.py  test_orchestrator_skip_cache.py  test_planner.py  test_planner_prioritize.py  test_rag.py  test_router.py  test_sanitize.py  test_schemas.py  test_skip_cache.py  test_tool_wrappers.py  test_verifier.py
tests/data/: prompt_injection_samples.txt
