[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coba"
version = "0.1.0"
description = "LLM-powered Source Code Vulnerability Analysis Agent (Code-base Audit)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Lã Phương Nam", email = "namlaphuong43@gmail.com" },
]
keywords = ["llm", "security", "sast", "vulnerability", "code-analysis", "agent", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    # Core
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "tenacity>=8.5",
    "httpx>=0.27",
    "anyio>=4.4",
    "orjson>=3.10",

    # API server
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",

    # LLM clients (all optional via extras, but base API supports them)
    "openai>=1.40",
    "anthropic>=0.34",
    "google-generativeai>=0.7",

    # Code parsing & chunking
    "tree-sitter>=0.22",
    "tree-sitter-languages>=1.10",

    # Templating prompts
    "jinja2>=3.1",

    # Vector store / RAG
    "chromadb>=0.5",
    "sentence-transformers>=3.0",

    # Misc
    "gitpython>=3.1",
    "pyyaml>=6.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
local-llm = [
    "ollama>=0.3",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.scripts]
coba = "coba.cli.main:app"

[project.urls]
Homepage = "https://github.com/nam091/CobA"
Documentation = "https://github.com/nam091/CobA/tree/main/docs"
Issues = "https://github.com/nam091/CobA/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/coba"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    "E501",          # let formatter handle line length
    "B008",          # FastAPI Depends() in defaults is idiomatic
    "UP042",         # str+Enum mix retained for pydantic interop
    "RUF012",        # Class-level mutable defaults are fine for SASTTool registries
    "RUF059",        # Allow unused-but-meaningful tuple unpacking
    "SIM103",        # Boolean function returns kept verbose for readability
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src/coba"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: requires external services (LLM, Joern)",
]
